# Alya-parallel-level

./: CMakeLists.txt  README.md
Sources/alya/interface/: CMakeLists.txt  mod_module_interface.f90
Sources/alya/main/: Alya.f90  Begrun.f90  Begste.f90  Begzon.f90  CMakeLists.txt  Conblk.f90  Concou.f90  Doiter.f90  Endste.f90  Endzon.f90  Filter.f90  Iniunk.f90  Interp.f90  Newmsh.f90  Output.f90  Reamod.f90  Redist.f90  Restar.f90  Solmem.f90  Timste.f90  Turnof.f90  Turnon.f90  mod_coupling_driver.f90  mod_moduls.f90
Sources/kernel/: CMakeLists.txt
Sources/kernel/cminfo/: info_make.f90  info_modules.f90  info_revision.f90
Sources/kernel/coupli/: cou_begste.f90  cou_communication_arrays.f90  cou_cvgunk.f90  cou_define_wet_geometry.f90  cou_initialize_coupling.f90  cou_inivar.f90  cou_memory.f90  cou_openfi.f90  cou_parall.f90  cou_readat.f90  cou_turnon.f90  coupli_destructor.f90  def_coupli.f90  mod_clock.f90  mod_commdom_alya.f90  mod_commdom_alya_cht.f90  mod_commdom_cc.f90  mod_commdom_contact.f90  mod_commdom_driver.f90  mod_commdom_dynamic.f90  mod_commdom_lm2.f90  mod_commdom_lmc.f90  mod_commdom_plepp.f90  mod_coupling_memory.f90  mod_coupling_timer.f90  mod_coupling_toolbox.f90  mod_couplings.f90  mod_couplings_communications.f90  mod_couplings_setup.f90  mod_holcut.f90  mod_interpolation.f90  mod_iqnls.f90  mod_measurements.f90  mod_mui.f90  mod_mui_driver.f90  mod_precice_driver.f90
Sources/kernel/defmod/: def_domain.f90  def_elmtyp.f90  def_elsest.f90  def_inpout.f90  def_kintyp.f90  def_kintyp_basic.f90  def_kintyp_boundary_conditions.f90  def_kintyp_comm.f90  def_kintyp_domain.f90  def_kintyp_functions.f90  def_kintyp_functions.f90~  def_kintyp_mesh.f90  def_kintyp_mesh_basic.f90  def_kintyp_module.f90  def_kintyp_physics.f90  def_kintyp_postprocess.f90  def_kintyp_solvers.f90  def_master.f90  def_parame.f90  def_postpr.f90  def_solver.f90
Sources/kernel/domain/: arrinb.f90  bouder_der.f90  bouele.f90  bougra.f90  calc_kx_tran_fiel.f90  cartbo.f90  cderda.f90  chaord.f90  chebou.f90  chenor.f90  chkcod.f90  chkmas.f90  cntelm.f90  cregro.f90  cshder.f90  csrgro.f90  d2sdx2.f90  determ.f90  divtet.f90  domain.f90  domain_destructor.f90  domarr.f90  dombou.f90  domfac.f90  domgra.f90  domnfa.f90  domvar.f90  dpofac.f90  edge_boundary_conditions.f90  elecsr.f90  element_grid_test.f90  elmca2.f90  elmcar_bub.f90  elmchl.f90  elmder.f90  elmle1.f90  elmlen.f90  elmlen_der.f90  elmlum.f90  elmmas.f90  (+109 more)
Sources/kernel/eigdir/: eigpak.f90  ensdir.f90
Sources/kernel/eigite/: eigit2.f90  eigit3.f90
Sources/kernel/elsest/: elsest_bindea.f90  elsest_binpos.f90  elsest_boxijk.f90  elsest_chkelm.f90  elsest_cputim.f90  elsest_deallo.f90  elsest_elq1p1.f90  elsest_geogid.f90  elsest_inelem.f90  elsest_invert.f90  elsest_newrap.f90  elsest_octfin.f90  elsest_octpoi.f90  elsest_octpos.f90  elsest_octpre.f90  elsest_octsub.f90  elsest_recomm.f90  elsest_runend.f90  elsest_statis.f90  mod_elsest.f90
Sources/kernel/kermod/: Kermod.f90  def_kermod.f90  def_kermod.f90~  ker_adapel.f90  ker_allaws.f90  ker_begrun.f90  ker_begste.f90  ker_biflu2.f90  ker_biflui.f90  ker_canopy.f90  ker_confun.f90  ker_disfun.f90  ker_endste.f90  ker_extrap_boundary.f90  ker_filter.f90  ker_inibcs.f90  ker_iniunk.f90  ker_inivar.f90  ker_interp.f90  ker_memall.f90  ker_memory.f90  ker_outerr.f90  ker_outvar.f90  ker_parall.f90  ker_plugin.f90  ker_readat.f90  ker_redist.f90  ker_redvel.f90  ker_restar.f90  ker_roughn.f90  ker_solmem.f90  ker_submsh.f90  ker_temfun.f90  ker_tespro.f90  ker_timste.f90  ker_turbul.f90  ker_turnon.f90  ker_velfun.f90  ker_vortex.f90  ker_waexlo.f90  (+19 more)
Sources/kernel/master/: Begste.f90  Conblk.f90  Doiter.f90  Domtra.f90  Doopti.f90  Endopt.f90  Endste.f90  Endzon.f90  Filter.f90  Initia.f90  Iniunk.f90  Newmsh.f90  Partit.f90  Readom.f90  Reaker.f90  Reapro.f90  Repart.f90  Timste.f90  Turnof.f90  Turnon.f90  alblsy.f90  arrzon.f90  commun.f90  deaker.f90  eigdef.f90  errors.f90  extens.f90  fildef.f90  inirun.f90  iniste.f90  inivar.f90  memunk.f90  mod_arrays.f90  mod_auto_tuning.f90  mod_bourgogne_pinotnoir.f90  mod_get_options.f90  mod_getopt.f90  mod_iofile.f90  mod_messages.f90  mod_moduls_conf.f90  (+22 more)
Sources/kernel/mathru/: adrmat.f90  adrres.f90  aitken.f90  appnum.f90  assrhs.f90  assric.f90  def_maths.f90  def_maths_bin.f90  def_maths_octbin.f90  def_maths_octree.f90  divvec.f90  divvecgp.f90  dragfo.f90  dsyevc3.f90  dsyevh3.f90  eige33.f90  eigenv.f90  elmcel.f90  elmlap.f90  elmsh2.f90  forcer.f90  frivel.f90  funcre.f90  gather.f90  heapsorti2.f90  hsort1.f90  jacobi_nre.f90  linint.f90  maxmax.f90  mbmabt.f90  mbmatb.f90  mbvab0.f90  mbvab2.f90  mbvatb.f90  minmax.f90  mixing.f90  mixmax.f90  mod_ADR.f90  mod_array_operations.f90  mod_clusters.f90  (+36 more)
Sources/kernel/memory/: memgen.f90  mod_memchk.f90  mod_memory.f90  mod_memory_basic.f90  mod_memory_parall.f90  mod_memory_physics.f90  mod_memory_tools.f90  output_memory_evolution.f90
Sources/kernel/meshin/: adamsh.f90  cargeo.f90  def_AMR.f90  memmsh.f90  meshin.f90  mod_AMR.f90  mod_AMR_interpolate.f90  mod_alya2gmsh.f90  mod_error_estimate.f90  mod_genbou.f90  mod_href.f90  mod_interp.f90  mod_sort.f90  (+2 more)
src/alya-info/: CMakeLists.txt
unitt/: CMakeLists.txt
unitt/oldies/: alya_unitt
unitt/test_files/: test_andreas.f90  test_test.f90
unitt/unitt_alya2gmsh/: unitt_alya2gmsh.f90
unitt/unitt_def_kintyp_basic/: unitt_def_kintyp_basic.f90
unitt/unitt_maths_conjugate_gradient/: unitt_maths_conjugate_gradient.f90
unitt/unitt_maths_eigen_3x3_symmetric_matrix/: unitt_maths_eigen_3x3_symmetric_matrix.f90
unitt/unitt_maths_eigen_3x3_symmetric_matrix_qp/: unitt_maths_eigen_3x3_symmetric_matrix_qp.f90
unitt/unitt_maths_geometrical_sort_using_coordinates/: unitt_maths_geometrical_sort_using_coordinates.f90
unitt/unitt_maths_heap_quick_sort/: unitt_maths_heap_quick_sort.f90
unitt/unitt_maths_linear_regressions/: unitt_maths_linear_regressions.f90
unitt/unitt_maths_quadratic_equation/: unitt_maths_quadratic_equation.f90
unitt/unitt_mesh_extract_copy/: unitt_mesh_extract_copy.f90
(+7272 files in other folders)
