add_subdirectory(unitt_def_kintyp_basic)
add_subdirectory(unitt_maths_quadratic_equation)
add_subdirectory(unitt_maths_eigen_3x3_symmetric_matrix)
add_subdirectory(unitt_maths_conjugate_gradient)
add_subdirectory(unitt_maths_heap_quick_sort)
add_subdirectory(unitt_maths_geometrical_sort_using_coordinates)
add_subdirectory(unitt_maths_eigen_3x3_symmetric_matrix_qp)
add_subdirectory(unitt_maths_linear_regressions)
add_subdirectory(unitt_mesh_extract_copy)
add_subdirectory(unitt_alya2gmsh)
